FIX: z-index for search page with results of people fixed on mobile

--- a/src/styles/_explore.scss
+++ b/src/styles/_explore.scss
@@ -297,6 +297,7 @@
           min-height: 100%;
           padding: 0;
           grid-gap: 0;
+          z-index: 0;
         }
       }
     }
